--- a/html/index.html
+++ b/html/index.html
@@ -182,55 +182,76 @@
         </div>
       </div>
     </section>
-    <div class="main_container cards_in d-flex flex-wrap align-items-start">
-      <div class="card_item"> <img class="card_img" src="./images/prices_card_1.png" alt="">
-        <div class="card_text"> 
-          <div class="text_title">Выезд аварийного комиссара <br> на место ДТП</div>
-          <div class="text_subtitle">Бесплатно</div>
+    <div class="main_container index_card_in_wrapper">
+      <div class="cards_in index_card_in">
+        <div class="swiper-wrapper"> 
+          <div class="swiper-slide">
+            <div class="card_item"> <img class="card_img" src="./images/prices_card_1.png" alt="">
+              <div class="card_text"> 
+                <div class="text_title">Выезд аварийного комиссара <br> на место ДТП</div>
+                <div class="text_subtitle">Бесплатно</div>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="card_item"> <img class="card_img" src="./images/prices_card_2.png" alt="">
+              <div class="card_text"> 
+                <div class="text_title">Фото и видеофиксация места ДТП</div>
+                <div class="text_subtitle">Бесплатно при заказе оформления</div>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="card_item"> <img class="card_img" src="./images/prices_card_3.png" alt="">
+              <div class="card_text"> 
+                <div class="text_title">Консультация и оформление ДТП</div>
+                <div class="text_subtitle">900 рублей</div>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="card_item"> <img class="card_img" src="./images/prices_card_4.png" alt="">
+              <div class="card_text"> 
+                <div class="text_title">Эвакуация авто с места ДТП</div>
+                <div class="text_subtitle">Бесплатно</div>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="card_item"> <img class="card_img" src="./images/prices_card_5.png" alt="">
+              <div class="card_text"> 
+                <div class="text_title">Подготовка документов для обращения в страховую компанию</div>
+                <div class="text_subtitle">От  1 000 рублей</div>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="card_item"> <img class="card_img" src="./images/prices_card_6.png" alt="">
+              <div class="card_text"> 
+                <div class="text_title">Юридическое сопровождение по последствиям ДТП</div>
+                <div class="text_subtitle">От  1 000 рублей</div>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="card_item"> <img class="card_img" src="./images/prices_card_7.png" alt="">
+              <div class="card_text"> 
+                <div class="text_title">Независимая экспертиза повреждений автомобиля</div>
+                <div class="text_subtitle">От 4 000 рублей</div>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="card_item"> <img class="card_img" src="./images/prices_card_8.png" alt="">
+              <div class="card_text"> 
+                <div class="text_title">Ремонт автомобиля после ДТП</div>
+                <div class="text_subtitle">В зависимости от повреждений</div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
-      <div class="card_item"> <img class="card_img" src="./images/prices_card_2.png" alt="">
-        <div class="card_text"> 
-          <div class="text_title">Фото и видеофиксация места ДТП</div>
-          <div class="text_subtitle">Бесплатно при заказе оформления</div>
-        </div>
-      </div>
-      <div class="card_item"> <img class="card_img" src="./images/prices_card_3.png" alt="">
-        <div class="card_text"> 
-          <div class="text_title">Консультация и оформление ДТП</div>
-          <div class="text_subtitle">900 рублей</div>
-        </div>
-      </div>
-      <div class="card_item"> <img class="card_img" src="./images/prices_card_4.png" alt="">
-        <div class="card_text"> 
-          <div class="text_title">Эвакуация авто с места ДТП</div>
-          <div class="text_subtitle">Бесплатно</div>
-        </div>
-      </div>
-      <div class="card_item"> <img class="card_img" src="./images/prices_card_5.png" alt="">
-        <div class="card_text"> 
-          <div class="text_title">Подготовка документов для обращения в страховую компанию</div>
-          <div class="text_subtitle">От  1 000 рублей</div>
-        </div>
-      </div>
-      <div class="card_item"> <img class="card_img" src="./images/prices_card_6.png" alt="">
-        <div class="card_text"> 
-          <div class="text_title">Юридическое сопровождение по последствиям ДТП</div>
-          <div class="text_subtitle">От  1 000 рублей</div>
-        </div>
-      </div>
-      <div class="card_item"> <img class="card_img" src="./images/prices_card_7.png" alt="">
-        <div class="card_text"> 
-          <div class="text_title">Независимая экспертиза повреждений автомобиля</div>
-          <div class="text_subtitle">От 4 000 рублей</div>
-        </div>
-      </div>
-      <div class="card_item"> <img class="card_img" src="./images/prices_card_8.png" alt="">
-        <div class="card_text"> 
-          <div class="text_title">Ремонт автомобиля после ДТП</div>
-          <div class="text_subtitle">В зависимости от повреждений</div>
-        </div>
-      </div>
+      <div class="scheme_work_4_pagination"></div>
     </div>
     <section class="real_company"> 
       <div class="main_container"> 
@@ -257,9 +278,67 @@
               </div>
             </div>
           </div>
-          <div class="real_company_cards_pagination"></div>
-          <div class="bg_number">50-50-50</div>
         </div>
+        <div class="real_company_cards_pagination"></div>
+        <div class="bg_number">50-50-50</div>
+      </div>
+    </section>
+    <div class="examples" id="examples"> 
+      <div class="main_container example_main_container">
+        <h4>Примеры работы комиссаров и ремонта после ДТП</h4>
+        <p>Здесь вы найдете примеры работы наших комиссаров, а также примеры восстановления авто после ДТП в нашем собственном автосервисе.</p>
+        <div class="tab d-flex justify-content-center align-items-center"><a class="active" href="#">Работа аваркомов</a><a href="#">Ремонт после ДТП </a></div>
+        <div class="swiper card_1 card_end"> 
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <div class="card_content"> <img src="./images/example_slide_11.png" alt="">
+                <div class="text">Часто бывает, что даже из-за мелких царапин водители не могут договориться самостоятельно, тогда по помощь приходит (приезжает) наш человек. Если без ГИБДД нельзя, то вызовем из нужного района.</div>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="card_content"> <img src="./images/example_slide_22.png" alt="">
+                <div class="text">
+                   Совместная работа с ГИБДД, скорой
+                  и участниками ДТП. Эвакуированы
+                  все авто, оформлено честно,
+                  виновным признано. В последствии
+                  оценка ущерба и помощь в
+                  «выбивании» КАСКО за «тотал».
+                </div>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="card_content"> <img src="./images/example_slide_33.png" alt="">
+                <div class="text"> Оформлено без лишних эмоций и без привлечения ГИБДД по европротоколу. Нас вызвал виновник, при оформлении вину признал. Эвакуация, помощь со страховой, ремонт на нашем СТО.                                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="example_card_1_pagination"></div>
+        <div class="examples_btns"> <a href="#">Еще примеры</a></div>
+      </div>
+    </div>
+    <section class="newsline"> 
+      <div class="main_container"> 
+        <div class="bg_number_one">50-50-50</div>
+        <div class="bg_number">50-50-50</div>
+        <h2>Прочие вопросы</h2>
+        <div class="newsline_content"> <a class="link" href="#">Если водитель попал в ДТП, согласно пунктам 2.5; 2.6 Правил ДД, он обязан... </a>
+          <p class="text_1">Значимость этих проблем настолько очевидна, что рамки и место обучения кадров требуют определения и уточнения новых предложений. Таким образом сложившаяся структура организации требуют определения и уточнения модели развития.</p>
+          <p class="text_2">Стиль маркированного списка:</p>
+          <p class="text_3">—  Значимость этих проблем настолько очевидна <br>
+            —  Разнообразный и богатый опыт <br>
+            —  Ссоответствует насущным потребностям
+          </p>
+          <p class="text_4">Стиль нумерованного списка:</p>
+          <ol> 
+            <li>Значимость этих проблем настолько очевидна</li>
+            <li>Разнообразный и богатый опыт</li>
+            <li>Ссоответствует насущным потребностям</li>
+          </ol>
+          <p class="text_5">Повседневная практика показывает, что рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании направлений прогрессивного развития. Идейные соображения высшего порядка, а также консультация с широким активом представляет собой интересный эксперимент проверки форм развития.</p>
+          <div class="links"> <a class="link" href="#">Если Вы не согласны о схемой ДТП и данных в протоколе происшествия </a><a class="link" href="#">Каковы самые распространённые ошибки при оформении ДТП </a><a class="link" href="#">Что делать, если вы попали в аварию на арендованном автомобиле </a><a class="link" href="#">Что входит в перечень обязанностей аварийного комиссара </a></div>
+        </div><a class="newsline_link index_news_link" href="#">Вся справка </a>
       </div>
     </section>
     <div class="index_bottom"> 
