prafka deyarli tugadi

--- a/html/examples.html
+++ b/html/examples.html
@@ -83,7 +83,7 @@
               </div>
             </section>
       <div class="main_container example_main_container">
-        <div class="tab d-flex justify-content-center align-items-center"><a class="active" href="#">Работа аваркомов</a><a href="#">Ремонт после ДТП </a></div>
+        <div class="tab d-flex justify-content-center align-items-center"><a class="active" href="#">Работа аваркомов</a><a class="link_dashed" href="#">Ремонт после ДТП </a></div>
         <div class="swiper card_1"> 
           <div class="swiper-wrapper">
             <div class="swiper-slide">
