--- a/html/index.html
+++ b/html/index.html
@@ -69,7 +69,8 @@
         <div class="home_text"> 
           <h1>Городская служба аварийных комиссаров Калининграда</h1>
           <p>Срочная помощь в оформлении ДТП. Выезд бесплатный в течении 15 минут.</p>
-          <div class="home_btns"> <a href="tel:505050"><img src="./images/phone_icon.svg" alt="">50-50-50 </a><img class="icon" src="./images/home_icon.svg" alt=""></div>
+          <div class="home_btns"> 
+            <a href="tel:505050"><img src="./images/phone_icon.svg" alt="">50-50-50 </a><img class="icon" src="./images/home_icon.svg" alt=""></div>
           <div class="home_bottom"> 
             <div class="home_bottom_block"> <span>Что делать при ДТП?</span><span>Как работает Служба</span></div>
             <div class="home_bottom_block"> <span>Чем и как мы Вам поможем?</span><span>Примеры работы Службы</span></div>
@@ -368,6 +369,25 @@
            Обращаясь в службу помощи при ДТП «50-50-50», вы получаете квалифицированную помощь независимо от степени тяжести аварии. Наши сотрудники готовы предложить свои услуги на любом этапе оформления документов и решения необходимых вопросов. Всего через 15 минут после звонка, к вам прибудет специалист, эксперт по ДТП. Если вы <span>арендовали авто в Калининграде</span>и попали на нем в ДТП - звоните! Мы поможем и в таком случае, чтобы владельцы автопроката вас не провели.</p>
         <p>
            Нередко случаются ситуации, когда авария незначительная и без пострадавших, но при этом стороны не могут прийти к соглашению, кто виновен. Чтобы не привлекать дорожную инспекцию к ситуации, стоит обратиться к аварийному комиссару. Опытный специалист проведет оценку ситуации и проработает все дорожные улики и свидетельства. Таким образом, будет установлен ущерб, причиненным сторонам. Проще говоря, такой спецпосредник поможет сторонам в конце концов справедливо договориться.</p>
+      </div>
+      <div class="bottom_text_media">
+        <div class="main_title">Стиль и размер h2-заголовка</div>
+            <div class="description">Идейные соображения высшего порядка, а также сложившаяся структура организации в значительной степени обуславливает создание существенных финансовых и административных условий. Повседневная практика показывает, что рамки и место обучения кадров требуют определения и уточнения существенных финансовых и административных условий.</div>
+            <div class="main_title_2">Стиль и размер h3-заголовка</div>
+            <div class="description">Значимость этих проблем настолько очевидна, что рамки и место обучения кадров требуют определения и уточнения новых предложений. Таким образом сложившаяся структура организации требуют определения и уточнения модели развития.</div>
+            <div class="description title">Стиль маркированного списка:</div>
+            <ul> 
+              <li>—  Значимость этих проблем настолько очевидна</li>
+              <li>—  Разнообразный и богатый опыт</li>
+              <li>—  Ссоответствует насущным потребностям</li>
+            </ul>
+            <div class="description title">Стиль нумерованного списка:</div>
+            <ol>
+              <li>Значимость этих проблем настолько очевидна</li>
+              <li>Разнообразный и богатый опыт</li>
+              <li>Ссоответствует насущным потребностям</li>
+            </ol>
+            <div class="description last">Повседневная практика показывает, что рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании направлений прогрессивного развития. Идейные соображения высшего порядка, а также консультация с широким активом представляет собой интересный эксперимент проверки форм развития.</div>
       </div>
     </div>
     <footer class="footer"> 
