--- a/html/price.html
+++ b/html/price.html
@@ -84,43 +84,39 @@
             </section>
       <div class="main_container text_wrapper d-flex align-items-start">
         <div class="text_left">
-          <div class="description">Товарищи! сложившаяся структура организации требуют от нас анализа позиций, занимаемых участниками в отношении поставленных задач. Таким образом укрепление и развитие структуры требуют от нас анализа позиций, занимаемых участниками в отношении поставленных задач.<br><br>Равным образом консультация с широким активом требуют определения и уточнения существенных финансовых и административных условий. Идейные соображения высшего порядка, а также начало повседневной работы по формированию позиции обеспечивает широкому кругу (специалистов) участие в формировании систем массового участия. Таким образом реализация намеченных плановых заданий требуют от нас анализа направлений прогрессивного развития.
-            <div class="main_title">Стиль и размер h2-заголовка</div>
-            <div class="description">Идейные соображения высшего порядка, а также сложившаяся структура организации в значительной степени обуславливает создание существенных финансовых и административных условий. Повседневная практика показывает, что рамки и место обучения кадров требуют определения и уточнения существенных финансовых и административных условий.</div>
-            <div class="main_title_2">Стиль и размер h3-заголовка</div>
-            <div class="description">Значимость этих проблем настолько очевидна, что рамки и место обучения кадров требуют определения и уточнения новых предложений. Таким образом сложившаяся структура организации требуют определения и уточнения модели развития.</div>
-            <div class="description title">Стиль маркированного списка:</div>
-            <ul> 
-              <li>—  Значимость этих проблем настолько очевидна</li>
-              <li>—  Разнообразный и богатый опыт</li>
-              <li>—  Ссоответствует насущным потребностям</li>
-            </ul>
-            <div class="description title">Стиль нумерованного списка:</div>
-            <ol>
-              <li>Значимость этих проблем настолько очевидна</li>
-              <li>Разнообразный и богатый опыт</li>
-              <li>Ссоответствует насущным потребностям</li>
-            </ol>
-            <div class="description last">Повседневная практика показывает, что рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании направлений прогрессивного развития. Идейные соображения высшего порядка, а также консультация с широким активом представляет собой интересный эксперимент проверки форм развития.</div>
-          </div>
+          <p class="description description_top">Товарищи! сложившаяся структура организации требуют от нас анализа позиций, занимаемых участниками в отношении поставленных задач. Таким образом укрепление и развитие структуры требуют от нас анализа позиций, занимаемых участниками в отношении поставленных задач.</p>
+          <p class="description">Равным образом консультация с широким активом требуют определения и уточнения существенных финансовых и административных условий. Идейные соображения высшего порядка, а также начало повседневной работы по формированию позиции обеспечивает широкому кругу (специалистов) участие в формировании систем массового участия. Таким образом реализация намеченных плановых заданий требуют от нас анализа направлений прогрессивного развития.</p>
+          <h2 class="main_title">Стиль и размер h2-заголовка</h2>
+          <p class="description">Идейные соображения высшего порядка, а также сложившаяся структура организации в значительной степени обуславливает создание существенных финансовых и административных условий. Повседневная практика показывает, что рамки и место обучения кадров требуют определения и уточнения существенных финансовых и административных условий.</p>
+          <h3 class="main_title_2">Стиль и размер h3-заголовка</h3>
+          <p class="description">Значимость этих проблем настолько очевидна, что рамки и место обучения кадров требуют определения и уточнения новых предложений. Таким образом сложившаяся структура организации требуют определения и уточнения модели развития.</p>
+          <h4 class="description title">Стиль маркированного списка:</h4>
+          <ul> 
+            <li>—  Значимость этих проблем настолько очевидна</li>
+            <li>—  Разнообразный и богатый опыт</li>
+            <li>—  Ссоответствует насущным потребностям</li>
+          </ul>
+          <h4 class="description title">Стиль нумерованного списка:</h4>
+          <ol>
+            <li>Значимость этих проблем настолько очевидна</li>
+            <li>Разнообразный и богатый опыт</li>
+            <li>Ссоответствует насущным потребностям</li>
+          </ol>
+          <p class="description last">Повседневная практика показывает, что рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании направлений прогрессивного развития. Идейные соображения высшего порядка, а также консультация с широким активом представляет собой интересный эксперимент проверки форм развития.</p>
         </div>
         <div class="text_right">
           <div class="data_list">
             <div class="datas d-flex align-items-center justify-content-between">
-              <div class="data_name">Выезд на место ДТП и первичная консультация</div>
-              <div class="data_value free">Бесплатно</div>
+              <p class="data_name">Выезд на место ДТП и первичная консультация</p><span class="data_value free">Бесплатно</span>
             </div>
             <div class="datas d-flex align-items-center justify-content-between">
-              <div class="data_name">Эвакуация Вашего авто для клиентов нашего автосервиса</div>
-              <div class="data_value">Бесплатно</div>
+              <p class="data_name">Эвакуация Вашего авто для клиентов нашего автосервиса</p><span class="data_value">Бесплатно</span>
             </div>
             <div class="datas d-flex align-items-center justify-content-between">
-              <div class="data_name">Оформление Европротокола</div>
-              <div class="data_value">1 000 руб.</div>
+              <p class="data_name">Оформление Европротокола</p><span class="data_value">1 000 руб.</span>
             </div>
             <div class="datas d-flex align-items-center justify-content-between">
-              <div class="data_name">Оформление документов для ГИБДД</div>
-              <div class="data_value">2 000 руб.</div>
+              <p class="data_name">Оформление документов для ГИБДД</p><span class="data_value">2 000 руб.</span>
             </div>
           </div>
           <div class="main_title_2">Другие наши услуги</div>
