--- a/html/rates.html
+++ b/html/rates.html
@@ -91,7 +91,7 @@
               <li> <img src="./images/success_icon.svg" alt=""><span>Выезд на место ДТП</span></li>
               <li> <img src="./images/success_icon.svg" alt=""><span>Фото и видеофиксация ДТП</span></li>
               <li> <img src="./images/success_icon.svg" alt=""><span>Консультация и оформление ДТП</span></li>
-              <li class="title">Только европротокол:</li>
+              <li class="title title_1">Только европротокол:</li>
               <li>900 рублей — город</li>
               <li>2000 рублей — область</li>
               <li class="title">Оформление для ГИБДД:</li>
